--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -22,9 +22,9 @@ wagyu-model = { path = "../model", version = "0.6.3" }
 base58 = { version = "0.1" }
 bitvec = { version = "0.17.4" }
 ethereum-types = { version = "0.9.2", default-features = false }
-hex = { version = "0.4.2", default-features = false }
+#hex = { version = "0.4.2" }
 hmac = { version = "0.7.0" }
-libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
+libsecp256k1 = { version = "0.7.1", features = ["hmac"] }
 pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
 rand = { version = "0.7", default-features = false }
 rand_xorshift = { version = "0.2" }
@@ -34,6 +34,7 @@ serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 sha2 = { version = "0.8", default-features = false }
 tiny-keccak = { version = "1.4" }
+hex = "0.4.3"
 
 [features]
 default = ["std"]
